--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Create Account</h2>
         <form action="">
             <input type="email" class="box" placeholder="Your Email">
-            <input type="password" class="box" id="psw" pattern="{8,}" placeholder="Your Password">
+             <input type="password" id="psw" class="box" name="psw" placeholder="Your Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             <p> <span><input type="checkbox" placeholder="" name="" id=""></span> I agree to the Terms and Conditions</p>
             <button type="button" class="btn">Sign Up</button>
         </form>
